gulp error erased dev

--- a/public/css/src/app/app_header.css
+++ b/public/css/src/app/app_header.css
@@ -57,14 +57,15 @@
 }
 
 .app__menu-item:hover .app__menu-icon {
-	color: #696969;
+    color: #696969;
 }
-}
+
 .app__menu-item.--active {
     background: black;
 }
+
 .app__menu-item.--active .app__menu-icon {
-	color: white;
+    color: white;
 }
 
 .app__menu-item .bubble {
@@ -81,26 +82,28 @@
     margin: 14px auto;
     font-size: 26px;
     transition: all ease-in .10s;
-} 
-
-.app-header__title {display: none;position: relative;top: 3px;}
-
-.app-header-titles {
-	display: none;
-	justify-content: center;
-	align-items: center;
-	position: absolute;
-	height: 100%;
-	left: 50%;
-	transform: translate(-50%,0);
-	color: white;
-	font-size: 30px;
-	font-family: 'creamy';
 }
 
 .app-header__title {
-
+    display: none;
+    position: relative;
+    top: 3px;
 }
+
+.app-header-titles {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    height: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    color: white;
+    font-size: 30px;
+    font-family: 'creamy';
+}
+
+.app-header__title {}
 
 @media screen and (max-width: 1000px) {
     .app-header__logo {
