--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -11,19 +11,25 @@
     width: 100%!important;
     height: 97%!important;
 }
-.chat-inview-messages .jspPane{
+
+.chat-inview-messages .jspPane {
     display: block;
     width: 100%!important;
     padding-top: 0!important;
     padding-bottom: 20px!important;
 }
-.chat-inview-messages .jspVerticalBar {right: 0px;width: 4px;}
 
-.chat-inview-messages .jspTrack {
-    
+.chat-inview-messages .jspVerticalBar {
+    right: 0px;
+    width: 4px;
 }
 
-.chat-inview-messages .jspDrag {background: #D4D4D4;}
+.chat-inview-messages .jspTrack {}
+
+.chat-inview-messages .jspDrag {
+    background: #D4D4D4;
+}
+
 .chat-inview {
     display: flex;
     flex-flow: column;
@@ -37,6 +43,7 @@
     width: 100%;
     height: 100%;
 }
+
 .chat-inview-item.--active {
     display: flex;
 }
@@ -77,16 +84,15 @@
     font-size: 20px;
     left: 6px;
 }
+
 .chat-inview__icon.--close {
     right: 8px;
     font-size: 20px;
 }
 
-
 .chat-inview__icon.--options {
     right: 6px;
 }
-
 
 .chat-inview__icon.--users {
     left: 40px;
@@ -95,7 +101,7 @@
 .chat-inview.--team {
     display: none;
 }
- 
+
 .chat-inview.--all {}
 
 .chat-inview-title {
@@ -123,13 +129,10 @@
     text-overflow: ellipsis;
 }
 
-.chat-inview-title__h1 .--hour {
+.chat-inview-title__h1 .--hour {}
 
-}
+.chat-inview-title__h1 .--date {}
 
-.chat-inview-title__h1 .--date {
-
-}
 .chat-inview-title__h2 .--place-name {
     margin-left: 6px;
 }
@@ -286,20 +289,23 @@
     font-weight: 400;
     margin: 1px 0;
     line-height: 20px;
-} 
+}
 
 .chat-inview-message__bubble.--merged.--first {
     border-bottom-left-radius: 2px;
     border-top-left-radius: 20px;
 }
+
 .chat-inview-message__bubble.--merged.--last {
     border-top-left-radius: 0;
     border-bottom-left-radius: 20px;
 }
+
 .chat-inview-message__bubble.--merged {
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
 }
+
 .chat-inview-message__bubble.--tall {
     border-radius: 20px;
     border-top-left-radius: 3px;
@@ -311,11 +317,13 @@
     border-bottom-right-radius: 2px;
     border-top-right-radius: 20px;
 }
+
 .chat-inview-message.--me .chat-inview-message__bubble.--merged.--last,
-.chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message__bubble.--merged.--last{
+.chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message__bubble.--merged.--last {
     border-top-right-radius: 0;
     border-bottom-right-radius: 20px;
 }
+
 .chat-inview-message.--me .chat-inview-message__bubble.--merged,
 .chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message__bubble.--merged {
     border-radius: 30px;
@@ -323,7 +331,7 @@
     border-top-right-radius: 2px;
     margin-right: 0;
     margin-left: auto;
-}  
+}
 
 .chat-inview-message.--me .chat-inview-message__bubble.--tall,
 .chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message__bubble.--tall {
@@ -332,21 +340,21 @@
     border-bottom-right-radius: 3px;
 }
 
-
-
-
 .chat-inview-message__bubble:hover {
     /* opacity: .8; */
 }
+
 
 /* Positionning the messages in the right order - left/right - in chat inviews */
 
 .chat-inview-message {
     justify-content: flex-start;
 }
+
 .chat-inview-message-head {
     order: 1;
 }
+
 .chat-inview-message-body {
     order: 2;
 }
@@ -358,6 +366,7 @@
 .chat-inview-item.--all .chat-inview-message.--friend {
     justify-content: flex-end;
 }
+
 .chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message-head {
     order: 2;
 }
@@ -365,7 +374,6 @@
 .chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message-body {
     order: 1;
 }
-
 
 .chat-inview-item.--pending .chat-inview-footer {
     background: #eee;
@@ -403,6 +411,7 @@
     outline: none;
     width: 100%;
 }
+
 
 /*.chat-inview-input__img {
     width: 17px;
@@ -442,6 +451,7 @@
     /* top: 0; */
     /* left: 0; */
 }
+
 .chat-inview-options__close {
     position: absolute;
     top: 0px;
@@ -453,7 +463,14 @@
     width: 40px;
 }
 
-.chat-inview-users {width: 75%;height: 100%;margin-left: auto;background: white;flex-flow: column;}
+.chat-inview-users {
+    width: 75%;
+    height: 100%;
+    margin-left: auto;
+    background: white;
+    flex-flow: column;
+}
+
 .chat-inview-users__group {
     height: 38px;
     display: flex;
@@ -465,13 +482,14 @@
     background: #eee;
     font-weight: 600;
 }
+
 .chat-inview-users__group i {}
+
 .chat-inview-users__group span {
     margin-left: 6px;
 }
 
-.chat-inview-users .user-row {
-}
+.chat-inview-users .user-row {}
 
 .chat-inview-users .user-row__informations {
     padding-left: 10px;
@@ -486,9 +504,7 @@
     font-weight: 400;
 }
 
-.chat-inview-seen-by__label {
-
-}
+.chat-inview-seen-by__label {}
 
 .chat-inview-seen-by i {
     margin-left: 2px;
