--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -1,81 +1,87 @@
-
 .map {
     width: 100%;
 }
 
 .app-section.--map {
-	height: 100vh;
-	position: relative;
-	top: -2px;
+    height: 100vh;
+    position: relative;
+    top: -2px;
 }
+
 .js-map-wrap {
-	height: 100%;
-	width: 100%;
-	position: absolute!important;
+    height: 100%;
+    width: 100%;
+    position: absolute!important;
 }
 
 .map__icon {
-	position: absolute;
-	z-index: 1;
-	font-size: 30px;
+    position: absolute;
+    z-index: 1;
+    font-size: 30px;
 }
+
 .map__icon.--geoloc,
 .map__icon.--change-location {
-	bottom: 30px;
-	font-size: 36px;
-	cursor: pointer;
+    bottom: 30px;
+    font-size: 36px;
+    cursor: pointer;
 }
 
 .map__icon.--change-location {
-	right: 20px;
+    right: 20px;
 }
+
 .map__icon.--create-before {
-	position: fixed;
-	background: #1B69EC;
-	color: white;
-	height: 50px;
-	width: 50px;
-	font-size: 20px;
-	right: 20px;
-	top: 107px;
-	cursor: pointer;
-	z-index: 10;
-	display: none;
+    position: fixed;
+    background: #1B69EC;
+    color: white;
+    height: 50px;
+    width: 50px;
+    font-size: 20px;
+    right: 20px;
+    top: 107px;
+    cursor: pointer;
+    z-index: 10;
+    display: none;
 }
+
 .map__icon.--create-before:hover {
-	background: rgba(27, 105, 236, 0.75);
+    background: rgba(27, 105, 236, 0.75);
 }
 
 .map__icon.--geoloc {
-	left: 20px;
+    left: 20px;
 }
+
 .map__icon.--location {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
 .map__overlay {
-	background: rgba(0,0,0,.15);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	display: none;
+    background: rgba(0, 0, 0, .15);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: none;
 }
 
 .map-browse {
-	position: fixed;
-	bottom: 32px;
-	right: 76px;
-	width: 300px;
-	height: 44px;
-	border-radius: 100px;
-	z-index: 10;
-	box-sizing: border-box;
-	display: none;
+    position: fixed;
+    bottom: 32px;
+    right: 76px;
+    width: 300px;
+    height: 44px;
+    border-radius: 100px;
+    z-index: 10;
+    box-sizing: border-box;
+    display: none;
 }
+
 .map-browse input {
     width: 330px;
     border-radius: 2px;
@@ -86,19 +92,20 @@
     border-bottom: 3px solid #191919;
 }
 
-.map-browse input ::-webkit-input-placeholder {
-   color: black!important;
+.map-browse input::-webkit-input-placeholder {
+    color: black!important;
 }
 
-.map-browse input :-moz-placeholder { /* Firefox 18- */
-   color: black!important; 
+.map-browse input:-moz-placeholder {
+    /* Firefox 18- */
+    color: black!important;
 }
 
-.map-browse input ::-moz-placeholder {  /* Firefox 19+ */
-   color: black!important;  
+.map-browse input::-moz-placeholder {
+    /* Firefox 19+ */
+    color: black!important;
 }
 
-.map-browse input :-ms-input-placeholder {  
-   color: black!important; 
+.map-browse input:-ms-input-placeholder {
+    color: black!important;
 }
-
