--- a/public/css/src/map/map_mapview.css
+++ b/public/css/src/map/map_mapview.css
@@ -1,4 +1,3 @@
-
 .mapview-wrap {
     background: #313131;
     padding: 12px 20px;
@@ -13,15 +12,16 @@
     letter-spacing: .4px;
     opacity: 0;
 }
+
 .mapview {
     display: flex;
     justify-content: space-around;
 }
-.mapview--event {
-}
-.mapview--party {
 
-} 
+.mapview--event {}
+
+.mapview--party {}
+
 .mapview__close {
     position: absolute;
     right: 0px;
@@ -35,6 +35,7 @@
     height: 14px;
     padding-top: 3px;
 }
+
 .mapview__close:hover {
     color: white;
 }
@@ -42,6 +43,7 @@
 .mapview__divider--sm {
     margin: 0 5px;
 }
+
 .mapview__divider--md {
     margin: 0 8px;
 }
@@ -50,60 +52,64 @@
     display: flex;
     align-items: center;
 }
+
 .mapview-host {
     margin: 0 3px;
     position: relative;
 }
+
 .mapview-host__flag {
     background: #313131;
     border-color: #313131;
 }
-.mapview-host__img {
 
-} 
+.mapview-host__img {}
+
 .mapview-context {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .mapview-context__element {
     margin: 2px 0;
     text-shadow: 0 0 2px black;
     display: flex;
 }
+
 .mapview-context__icon {
     color: #e94f6a;
     margin-right: 2px;
 }
+
 .mapview-address {
     display: flex;
 }
-.mapview-address__name {
 
-}
-.mapview-address__icon {
+.mapview-address__name {}
 
-} 
+.mapview-address__icon {}
+
 .mapview-date {
     display: flex;
     color: #CACACA;
     font-family: 'Lato';
 }
-.mapview-date__icon {
 
-}
-.mapview-date__hour {
+.mapview-date__icon {}
 
-} 
-.mapview-date__day {
+.mapview-date__hour {}
 
-}
+.mapview-date__day {}
+
 .mapview-date__splitter {
     width: 7px;
 }
+
 .mapview-hostnames {
     display: flex;
 }
+
 .mapview-hostnames__name {
     display: none;
     padding: 4px 6px;
@@ -115,28 +121,27 @@
     text-overflow: ellipsis;
     font-size: 10px;
 }
+
 .mapview-action {
     display: flex;
     justify-content: center;
     align-items: center;
-} 
+}
+
 .mapview-action__btn {
     font-size: 10px;
     background: #B01756;
     border: 1px solid #520C29;
 }
+
 .mapview-action__btn:hover {
     background: #E02471;
 }
 
-.mapview-context--party {
-}
-.mapview-emptytext {
+.mapview-context--party {}
 
-}
-.mapview-emptytext__name {
+.mapview-emptytext {}
 
-}
-.mapview-emptytext__icon {
+.mapview-emptytext__name {}
 
-}
+.mapview-emptytext__icon {}
