--- a/public/css/src/meepass/meepass.css
+++ b/public/css/src/meepass/meepass.css
@@ -1,55 +1,58 @@
-
-.menu-section.--meepass {
-
-}
+.menu-section.--meepass {}
 
 .menu-section.--meepass .menu-section-segment {}
 
-.meepass {width: 100%;min-height: 280px;display: flex;flex-flow: column nowrap;}
+.meepass {
+    width: 100%;
+    min-height: 280px;
+    display: flex;
+    flex-flow: column nowrap;
+}
 
 .meepass__item {
-	border-bottom: 1px solid #eee;
-	position: relative;
-	padding: 16px 20px;
-	display: none;
-	flex-flow: row nowrap;
-	justify-content: flex-start;
-	align-items: center;
-	cursor: pointer;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding: 16px 20px;
+    display: none;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
 }
+
 .meepass__item:hover {
-	background: #f9f9f9;
+    background: #f9f9f9;
 }
+
 .meepass__item.--last {
-	border-bottom: none;
+    border-bottom: none;
 }
 
 .meepass .row-pic__icon {
-	background: #de3653
+    background: #de3653
 }
-
 
 .meepass-ribbon {
-	position: fixed;
-	left: 50%;
-	transform: translate(-50%,0)!important;
-	width: 300px;
-	height: 34px;
-	top: 10px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	/* background: rgb(26, 82, 177); */
-	color: white;
-	z-index: 1000;
-	font-size: 16px;
-	font-weight: bold;
-	border-radius: 100px;
-	margin: 0 auto;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0)!important;
+    width: 300px;
+    height: 34px;
+    top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: rgb(26, 82, 177); */
+    color: white;
+    z-index: 1000;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 100px;
+    margin: 0 auto;
 }
 
-.meepass-ribbon span {font-family: 'Open sans';}
-
-.meepass-ribbon h2 {
-
+.meepass-ribbon span {
+    font-family: 'Open sans';
 }
+
+.meepass-ribbon h2 {}
