--- a/public/css/src/profile/profile_user.css
+++ b/public/css/src/profile/profile_user.css
@@ -1,4 +1,3 @@
-
 .slide.--profile {
     left: 0px;
     width: 350px;
@@ -34,8 +33,7 @@
     height: 100%;
 }
 
-.user-pics__img.--active {
-}
+.user-pics__img.--active {}
 
 .user-pics__img img {
     width: 100%;
@@ -75,6 +73,7 @@
     font-size: 20px;
     font-weight: 400;
 }
+
 .user-infos__item.--base.--female {
     background: rgba(213, 93, 140, 0.79);
 }
@@ -95,11 +94,12 @@
     top: 2px;
 }
 
-.user-infos__item.--base comma {
+.user-infos__item.--base comma {}
 
+.user-infos__item.--base span {
+    margin-right: 4px;
+    position: relative;
 }
-
-.user-infos__item.--base span {margin-right: 4px;position: relative;}
 
 .user-infos__item.--age {
     font-family: 'Open Sans';
@@ -168,7 +168,7 @@
     color: #454545;
     z-index: 10;
     /* background: rgba(0, 0, 0, 0.14); */
-    background: linear-gradient(transparent,rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.45));
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.45));
     width: 100%;
     height: 100px;
     justify-content: flex-end;
@@ -202,10 +202,24 @@
     color: rgba(255, 255, 255, 0.7);
 }
 
-.user-pics__navigate {position: absolute;font-size: 16px;height: 30px;width: 30px;top: 39%;transform: translate(0,-56%);cursor: pointer;color: #FFFFFF;/* color: #3C7FEE; */background: rgba(72, 72, 72, 0.33);z-index: 10;}
+.user-pics__navigate {
+    position: absolute;
+    font-size: 16px;
+    height: 30px;
+    width: 30px;
+    top: 39%;
+    transform: translate(0, -56%);
+    cursor: pointer;
+    color: #FFFFFF;
+    /* color: #3C7FEE; */
+    background: rgba(72, 72, 72, 0.33);
+    z-index: 10;
+}
+
 .user-pics__navigate.--left {
     left: 10px;
 }
+
 .user-pics__overlay {
     width: 100%;
     height: 100%;
@@ -216,9 +230,12 @@
     opacity: .2;
 }
 
-.user-pics__navigate.--right {right: 6px;}
-.user-pics__navigate i {
+.user-pics__navigate.--right {
+    right: 6px;
 }
+
+.user-pics__navigate i {}
+
 .user-pics__navigate:hover {
     opacity: .5;
 }
