--- a/public/css/src/search/search_filters.css
+++ b/public/css/src/search/search_filters.css
@@ -11,17 +11,21 @@
     box-shadow: 0 0 14px #949494;
     flex-flow: column nowrap;
 }
+
 .search-filters-section {
     display: flex;
     flex-flow: column nowrap;
     margin: 0 0 20px 0;
 }
+
 .search-filters-section.--gender {
     flex: 1 0 auto;
 }
+
 .search-filters-section.--age {
     flex: 1 0 auto;
 }
+
 .search-filters-section.--countries {
     margin-bottom: 0px;
 }
@@ -32,11 +36,15 @@
     padding-left: 20px;
     padding-bottom: 10px;
 }
+
 .search-filters-section.--countries .search-filters-section__title {
     border-bottom: 1px solid #eee;
 }
+
 .search-filters-section__title h2 {}
+
 .search-filters-section__title span {}
+
 .search-filters-row {
     width: 100%;
     background: white;
@@ -50,87 +58,113 @@
     box-sizing: border-box;
     font-size: 13px;
 }
+
 .search-filters-row+.search-filters-row {
     border-top: none;
 }
+
 .search-filters-row .toggle {
     height: 22px;
     width: 46px;
 }
+
 .search-filters-row .toggle__background {}
+
 .search-filters-row .toggle__button {}
+
 .search-filters-gender {
-    display: flex; 
+    display: flex;
 }
+
 .search-filters-gender__icon {
     margin-right: 8px;
 }
+
 .search-filters-gender__icon i {}
+
 .search-filters-gender__label {
     color: #454545;
     display: flex;
     align-items: center;
 }
+
 .search-filters-gender__label label {}
+
 .search-filters-section__explanations {
     color: #919191;
     font-size: 10px;
     padding: 10px 10px;
     line-height: 14px;
 }
+
 .search-filters-section__explanations h5 {}
+
 .search-filters-agerange {
     position: relative;
     width: 90%;
     margin: 0 auto;
 }
+
 .search-filters-agerange input {
     width: 100%;
 }
+
 .search-filters-countries {}
+
 .search-filters-countries.--active .search-filters-country__users-count {
     font-weight: bolder;
     color: purple;
 }
+
 .search-filters-countries.--active .search-filters-country__label {
     font-weight: bold;
     color: #454545;
 }
+
 .search-filters-country__flag {
     margin-right: 8px;
     margin-left: 6px;
 }
+
 .search-filters-country__flag i {
     border-radius: 6px 0 6px 0;
 }
+
 .search-filters-country__label {
     margin-right: 6px;
     color: #454545;
-} 
-.search-filters-country__label label {
 }
+
+.search-filters-country__label label {}
+
 .search-filters-country__users-count {
     margin-right: 4px;
     font-family: 'Open sans';
     font-size: 12px;
     display: none!important;
 }
+
 .search-filters-country__users-count div {}
-.search-filters-country__users-count div span{}
+
+.search-filters-country__users-count div span {}
 
 .search-filters-agerange .rangeslider {}
+
 .search-filters-agerange .rangeslider--horizontal {
     height: 6px;
 }
+
 .search-filters-agerange .rangeslider__fill {
     background: #33afff;
 }
+
 .search-filters-agerange .rangeslider__handle {
     width: 20px;
     height: 20px;
     background-image: none;
     box-shadow: none;
 }
+
 .search-filters-agerange .rangeslider__handle::after {
     background-image: none;
 }
