--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -1,9 +1,14 @@
 .menu-section.--settings {}
 
-.menu-section.--settings .segment {margin-bottom: 40px;width: 90%;}
+.menu-section.--settings .segment {
+    margin-bottom: 40px;
+    width: 90%;
+}
+
 .menu-section.--settings .segment__part {
     font-size: 12px;
 }
+
 .settings {
     width: 80%;
     display: flex;
@@ -18,7 +23,7 @@
 .settings.--notifications {}
 
 .settings.--ux {}
- 
+
 .settings__title {
     /* text-transform: uppercase; */
     font-size: 12px;
@@ -61,7 +66,7 @@
     font-weight: 600;
     font-family: 'Alegreya sans';
     border-radius: 4px;
-} 
+}
 
 .settings button.--delete,
 .settings button.--changelang {
@@ -95,17 +100,12 @@
     transition: all ease-out .15s;
 }
 
-.settings-item.--active {
-   
-   
-}
+.settings-item.--active {}
 
 .settings-item.--active input {
     border-bottom: 1px solid #1B69EC;
     padding-left: 15px;
 }
-
-
 
 .modal.--sponsorship button {
     background: #7b4cbb;
@@ -116,7 +116,6 @@
     font-size: 22px;
     font-weight: bolder;
 }
-
 
 .menu-section-submenu {
     display: flex;
@@ -138,7 +137,12 @@
     font-size: 13px;
 }
 
-.menu-section-submenu__item h4 {overflow: hidden;white-space: nowrap;min-width: 100px;text-overflow: ellipsis;}
+.menu-section-submenu__item h4 {
+    overflow: hidden;
+    white-space: nowrap;
+    min-width: 100px;
+    text-overflow: ellipsis;
+}
 
 .menu-section-submenu__bar {
     display: none;
@@ -160,7 +164,6 @@
     display: block;
 }
 
-
 @media (max-width: 1000px) {
     .menu-section.--settings .segment__part {
         overflow: hidden;
@@ -174,4 +177,3 @@
         overflow: hidden;
     }
 }
-
