--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -14,7 +14,7 @@
   <meta property="og:site_name" content="Meefore">
   <meta property="og:url" content="http://www.meefore.com/home">
   <meta property="og:image" content="http://res.cloudinary.com/radioreve/image/upload/v1456943482/landing_1.jpg">
-  <meta property="fb:app_id" content="<!-- build:header-fb-id -->1509405206012202<!-- endbuild -->">
+  <meta property="fb:app_id" content="1638104993142222">
 
   <meta property="og:description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi.">
 
@@ -26,54 +26,7 @@
   <link href='https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700,800' rel='stylesheet' type='text/css'>
   
   <!-- Librairies -->
-  <!-- build:css -->
-  <link rel="stylesheet" href="/css/lib/jscrollpane/jscrollpane.css">
-  <link rel="stylesheet" href="/css/lib/fontello/css/fontello.css">
-  <link rel="stylesheet" href="/css/lib/flags/css/flag-icon.min.css">
-  <link rel="stylesheet" href="/css/lib/hint/hint.css">
-  <link rel="stylesheet" href="/css/lib/nouislider/nouislider.css">
-  <link rel="stylesheet" href="/css/lib/pikadate/pikadate.css">
-  
-  <!-- Reset -->
-  <link rel="stylesheet" href="/css/src/reset/reset.css">
-
-  <!-- App, first order -->
-  <link rel="stylesheet" href="/css/src/app/app_header.css">
-  <link rel="stylesheet" href="/css/src/app/app_layout.css">
-  <link rel="stylesheet" href="/css/src/app/app_ux.css">
-  
-  <!-- App, in any order -->
-  <link rel="stylesheet" href="/css/src/ioptions/ioptions.css">
-  <link rel="stylesheet" href="/css/src/before/before.css"> 
-  <link rel="stylesheet" href="/css/src/before/before_create.css">
-  <link rel="stylesheet" href="/css/src/party/party.css">
-  <link rel="stylesheet" href="/css/src/party/party_create.css">
-  <link rel="stylesheet" href="/css/src/chat/chat.css">
-  <link rel="stylesheet" href="/css/src/chat/chat_inview.css">
-  <link rel="stylesheet" href="/css/src/friends/friends.css">
-  <!-- <link rel="stylesheet" href="/css/src/invite/invite.css"> -->
-  <link rel="stylesheet" href="/css/src/cheers/cheers.css">
-  <link rel="stylesheet" href="/css/src/landing/landing_v2.css">
-  <link rel="stylesheet" href="/css/src/menu/menu.css">
-  <link rel="stylesheet" href="/css/src/notifications/notifications.css">
-  <link rel="stylesheet" href="/css/src/onboarding/onboarding.css">
-  <link rel="stylesheet" href="/css/src/profile/profile.css">
-  <link rel="stylesheet" href="/css/src/profile/profile_user.css">
-  <link rel="stylesheet" href="/css/src/pictures/pictures.css">
-  <link rel="stylesheet" href="/css/src/thumbnail/thumbnail.css">
-  <link rel="stylesheet" href="/css/src/rosace/rosace.css">
-  <link rel="stylesheet" href="/css/src/search/search.css">
-  <link rel="stylesheet" href="/css/src/search/search_filters.css">
-  <link rel="stylesheet" href="/css/src/seek/seek.css">
-  <link rel="stylesheet" href="/css/src/settings/settings.css">
-  <!-- <link rel="stylesheet" href="/css/src/shared/shared.css"> -->
-  <link rel="stylesheet" href="/css/src/login/login_v2.css">
-  <link rel="stylesheet" href="/css/src/map/map.css">
-  <link rel="stylesheet" href="/css/src/map/map_mapview.css">
-  <link rel="stylesheet" href="/css/src/map/map_sideview.css">
-  <link rel="stylesheet" href="/css/src/media/media.css">
-  <link rel="stylesheet" href="/css/src/dev/dev.css">
-  <!-- endbuild -->
+  <link rel="stylesheet" href="/dist/mee.css" />
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -613,7 +566,7 @@
               <div class="settings-input__icon --round-icon"><i class="icon icon-planet"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_country_label"></div>
-              </div>
+              </div> 
               <div class="toggle">
                 <div class="toggle__background"></div>
                 <div class="toggle__button"></div>
@@ -751,16 +704,7 @@
 
      <!-- Search start -->
     <section class="app-section --search" data-link="search">
-      <!-- build:remove -->
-      <div class="search-header">
-          <div class="search-header__title">
-            <h2>hello world</h2>
-          </div>
-        <div class="search__input">
-          <input type="text" placeholder="hello">
-        </div>
-      </div>
-      <!-- endbuild -->
+      
       <div class="search__title">
         <h2 data-lid="search_title"></h2>
       </div>
@@ -848,97 +792,20 @@
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>
 
 
-  <!-- build:js -->
-  <script src="js/lib/lodash/lodash.js"></script>
-  <script src="js/lib/mousetrap/mousetrap.js"></script>
-  <script src="js/lib/jquery/jquery.js"></script>
-  <script src="js/lib/pikaday/pikaday.js"></script>
-  <script src="js/lib/jscrollpane/jscrollpane.js"></script>
-  <script src="js/lib/jscrollpane/jscrollpane.mousewheel.js"></script>
-  <script src="js/lib/cloudinary/jquery.cloudinary.js"></script>
-  <script src="js/lib/typeahead/jquery.typeahead.js"></script>
-  <script src="js/lib/typed/typed.js"></script>
-  <script src="js/lib/imagesloaded/imagesloaded.js"></script>
-  <script src="js/lib/velocity/velocity.js"></script>
-  <script src="js/lib/velocity/velocity-ui.js"></script>
-  <script src="js/lib/moment/moment.min.js"></script>
-  <script src="js/lib/moment/momentwithlocale.min.js"></script>
-  <script src="js/lib/nouislider/nouislider.js"></script>
-
-  <!-- custom scripts -->
-  <script src="js/src/globals/globals.js"></script>
-  <script src="js/src/store/store.js"></script>
-  <script src="js/src/router/router.js"></script>
-  <script src="js/src/utils/utils.js"></script>
-  <script src="js/src/api/api.js"></script>
-  <script src="js/src/pictures/pictures.js"></script>
-  <script src="js/src/autologin/autologin.js"></script>
-  <script src="js/src/landing/landing.js"></script>
-  <script src="js/src/admin/admin.js"></script>
-  <script src="js/src/analytics/analytics_google.js"></script>
-  <script src="js/src/cheers/cheers.js"></script>
-  <script src="js/src/before/before.js"></script>
-  <script src="js/src/before/before_create.js"></script>
-  <script src="js/src/before/before_request.js"></script>
-  <script src="js/src/chat/chat.js"></script>
-  <script src="js/src/chat/chat_inview.js"></script>
-  <script src="js/src/chat/chat_test.js"></script>
-  <script src="js/src/friends/friends.js"></script>
-  <!-- <script src="js/src/invite/invite.js"></script> -->
-  <script src="js/src/languages/languages.js"></script>
-  <script src="js/src/languages/country.js"></script>
-  <script src="js/src/languages/textsources.js"></script>
-  <script src="js/src/facebook/facebook.js"></script>
-  <script src="js/src/map/map.js"></script>
-  <script src="js/src/map/map_styles.js"></script>
-  <script src="js/src/map/map_markers_url.js"></script>
-  <script src="js/src/connecter/connecter.js"></script>
-  <script src="js/src/notifications/notifications.js"></script>
-  <script src="js/src/onboarding/onboarding.js"></script>
-  <script src="js/src/party/party.js"></script>
-  <script src="js/src/seek/seek.js"></script>
-  <script src="js/src/party/party_create.js"></script>
-  <script src="js/src/profile/profile.js"></script>
-  <script src="js/src/profile/profile_user.js"></script>
-  <script src="js/src/menu/menu.js"></script>
-  <script src="js/src/nav/nav.js"></script>
-  <script src="js/src/search/search.js"></script>
-  <script src="js/src/search/search_filters.js"></script>
-  <script src="js/src/settings/settings.js"></script>
-  <!-- <script src="js/src/shared/shared.js"></script> -->
-  <script src="js/src/static/static.js"></script>
-  <!-- <script src="js/src/login/login.js"></script> -->
-  <script src="js/src/login/login_v2.js"></script>
-  <script src="js/src/ui/ui.js"></script>
-  <script src="js/src/ui/ui_toast.js"></script>
-  <script src="js/src/ui/ui_modal.js"></script>
-  <script src="js/src/ui/ui_slide.js"></script>
-  <script src="js/src/ui/ui_bubbles.js"></script>
-  <script src="js/src/ui/ui_ioptions.js"></script>
-  <script src="js/src/dev/dev.js"></script>
-  <script src="js/src/realtime/realtime.js"></script>
-  <script src="js/src/init/init.js"></script>
-  <!-- endbuild -->
+  <script src="/dist/mee.js"></script>
 
   
-  <!-- build:remove -->
-  <script src="js/src/map/map_test.js"></script>
-  <script src="js/src/before/before_test.js"></script>
-  <!-- endbuild -->
+  
 
    
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6QesJukMVpHVS6l8yvSt_pmCDCeYiYMI&libraries=places,geometry&callback=LJ.map.sayHello" type="text/javascript"></script>
   
   <script id="app_ids">  
-      //<!-- build:fb-app-id -->
-      window.facebook_app_id = "1638104993142222";
-      //<!-- endbuild -->
-      // <!-- build:pusher-app-id -->
-      window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
-      // <!-- endbuild -->
-      // <!-- build:app-env -->
-      window.LJ.app_mode     = "dev";
-      // <!-- endbuild -->
+      //
+window.facebook_app_id = "1638104993142222";      // 
+window.pusher_app_id = "f9e4bf4e8f1e0342ca27";
+      // 
+window.LJ.app_mode = "dev";
   </script> 
   
   <script>
